--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,19 +20,7 @@
 }
 .header__content {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header__content--item {
-	width: 25%;
-}
-.header__content--item.menu {
-	width: 50%;
-}
-.header__content--item.assets {
-	display: flex;
-	justify-content: flex-end;
-	/* align-items: center; */
+  align-items: flex-end;
 }
 .header__left {
   width: 45%;
@@ -42,15 +30,14 @@
   margin-top: 5px;
 }
 
-.header__menu_ul {
+.header__left ul {
   width: 100%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding-left: 0;
 }
 
-.header__menu_ul li {
+.header__left ul li {
   font-size: 14px;
   margin-right: 18px;
   position: relative;
@@ -59,10 +46,10 @@
   color: #2e2d2d;
   font-weight: 700;
 }
-.header__menu_ul li:hover {
+.header__left ul li:hover {
   color: #ff0000;
 }
-.header__menu_ul li::after {
+.header__left ul li::after {
   content: url("../../assets/images/new_design/red_dot.svg");
   display: block;
   position: absolute;
@@ -76,24 +63,24 @@
   right: 50%;
   opacity: 0;
 }
-.header__menu_ul li:hover::after {
+.header__left ul li:hover::after {
   opacity: 1;
 }
-.header__menu_ul li:last-child {
+.header__left ul li:last-child {
   margin-right: 0;
 }
 .header__catalog {
-  width: 120px;
-  height: 30px;
+  width: 150px;
+  height: 40px;
   background: linear-gradient(
     90deg,
     rgba(255, 72, 72, 1) 0%,
     rgba(206, 53, 53, 1) 61%,
     rgba(170, 39, 75, 1) 100%
   );
-  font-size: 14px;
+  font-size: 16px;
   color: #fff;
-  margin-top: 10px;
+  margin-top: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -108,8 +95,8 @@
 .header__catalog--icon {
   z-index: 5;
   position: relative;
-  width: 15px;
-  height: 10px;
+  width: 20px;
+  height: 15px;
   cursor: pointer;
   display: block;
 }
@@ -213,12 +200,10 @@
   transition: all 0.3s linear;
 }
 .header__assets-top {
-max-width: 150px;
   display: flex;
   align-items: center;
   /* justify-content: flex-end; */
   justify-content: space-around;
-
 }
 .header__assets-top div {
   text-align: center;
@@ -468,7 +453,7 @@ max-width: 150px;
   .header__left {
     width: 51%;
   }
-  .header__menu_ul li {
+  .header__left ul li {
     font-size: 12px;
     margin-right: 7px;
   }
