--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -18,7 +18,7 @@
 }
 .banner__left {
   /* max-width: 790px; */
-  width: 100%;
+  width: 65%;
   height: 375px;
   /* background: url("../../../assets/images/new_design/banner_main.png"); */
   /* background-repeat: no-repeat;
@@ -45,7 +45,7 @@
   /* position: absolute; */
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 .banner__btn {
   /* height: 100%; */
